# musa-611-spring-2022-week11

./: .gitignore  backend.md  package-lock.json  package.json  pyproject.toml  review.md
canvass/backend/: server.js
canvass/data/: README.md  fve.py  load_voter_export.sql  process_full_voter_export.py  split_full_voter_export.py
canvass/frontend-to-api/js/: main.js
canvass/frontend-to-gcs/js/: main.js
canvass/frontend/js/: main.js
livepyserver/: README.md  server.py
liveserver/: server.js
multiling/en/: index.html
multiling/fr/: index.html
multiling/js/: lang.en.js  lang.fr.js  main.js
webapis/geolocation/: index.html  main.js  styles.css
webapis/localstorage/: index.html  main.js  styles.css
