[tool.poetry]
name = "week10"
version = "0.1.0"
description = ""
authors = ["Mjumbe Poe <mjumbewu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
psycopg2-binary = "^2.9.3"
Flask-Cors = "^3.0.10"
SQLAlchemy = "^1.4.34"

[tool.poetry.dev-dependencies]
click = "^8.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
